[tool.poetry]
name = "yoloshow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
fast-dev-cli = "^0.9.8"
types-pyyaml = "^6.0.12.20240917"
types-setuptools = "^75.1.0.20240917"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
# quote-style = "preserve"
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true
